tags:
    - onlyAndroid
    - pull-request
appId: org.vechain.veworld.app
env:
    Key: "{\"version\":3,\"id\":\"8E39FB2F-3AE5-4DFC-849B-C78B310E6622\",\"crypto\":{\"ciphertext\":\"ebcc42b079516d1ba5a0377743422a17d8795a1c24d3ad7b7d30dbd6c8edab12\",\"cipherparams\":{\"iv\":\"3c3917afdf69bdc47f9693121fcc53e0\"},\"kdf\":\"scrypt\",\"kdfparams\":{\"r\":8,\"p\":1,\"n\":262144,\"dklen\":32,\"salt\":\"ac93e95a3a6d1b070c720078625a4ccc2cef113508e2dcc9acd774325dfbe326\"},\"mac\":\"ff87134edec116091a51572a2ea745b96a169c2bae1fa09007070f3dcf4a53ec\",\"cipher\":\"aes-128-ctr\"},\"address\":\"f077b491b355e64048ce21e3a6fc4751eeea77fa\"}"
    pwd: "Password1!"
---
- runFlow:
      when:
          platform: Android
      commands:
          - launchApp:
                clearState: true
          - tapOn:
                id: "CREATE_WALLET_BTN"

          - repeat:
                while:
                    visible: "Choose your 6-digit PIN"
                commands:
                    - tapOn: "1"

          - repeat:
                while:
                    visible: "Choose your 6-digit PIN"
                commands:
                    - tapOn: "1"

          - runFlow:
                when:
                    visible:
                        id: "Backup_later_button"
                commands:
                    - tapOn:
                          id: "Backup_later_button"

          - runFlow:
                when:
                    visible:
                        id: "button_notifications_skip"
                commands:
                    - tapOn:
                          id: "button_notifications_skip"

          - runFlow:
                when:
                    visible:
                        id: "Backup_later_button"
                commands:
                    - tapOn:
                          id: "Backup_later_button"

          - runFlow:
                when:
                    visible:
                        id: "close-button"
                commands:
                    - tapOn:
                          id: "close-button"

          - tapOn:
                id: "BalanceScreen_WalletManagementButton"
          - tapOn:
                id: "SelectAccountBottomSheet_SettingsButtonIcon"
          - tapOn:
                id: "Wallet_Management_AddWallet"
          - tapOn:
                id: "CreateOrImportWalletBottomSheet_ImportLocalWallet"

          - extendedWaitUntil:
                visible:
                    id: "import-input"
                timeout: 10000

          - tapOn:
                id: "import-input"
          - inputText: ${Key}

          - pressKey: Back

          - scrollUntilVisible:
                element: "Verify"
                direction: DOWN
                timeout: 10000

          - tapOn: "Verify"

          - extendedWaitUntil:
                visible:
                    id: "unlock-keystore-password-input"
                timeout: 10000

          - tapOn:
                id: "unlock-keystore-password-input"
          - assertVisible: "Unlock keystore"
          - inputText: ${pwd}
          - pressKey: Back
          - extendedWaitUntil:
                visible:
                    id: "unlock-keystore-button"
                timeout: 3000
          - waitForAnimationToEnd
          - tapOn:
                id: "unlock-keystore-button"

          - runFlow:
                when:
                    visible: "Save Password?"
                commands:
                    - tapOn: "No"

          - runFlow:
                when:
                    visible: "Incorrect password. Please try again"
                commands:
                    - tapOn: "Verify"
                    - extendedWaitUntil:
                          visible:
                              id: "unlock-keystore-password-input"
                          timeout: 10000
                    - tapOn:
                          id: "unlock-keystore-password-input"
                    - inputText: ${pwd}
                    - tapOn:
                          id: "unlock-keystore-button"

          - repeat:
                while:
                    visible: "Insert your 6-digit PIN"
                commands:
                    - tapOn: "1"

          - extendedWaitUntil:
                visible:
                    id: "Wallet_Management_Screen"
                timeout: 30000

          - assertVisible: "Wallet 2"

          - tapOn:
                id: "wallet-tab"

          - runFlow: ../setup_reset/resetApp.yaml
