#send_token_account_method.yaml
appId: org.vechain.veworld.app
tags:
  - pull-request
  - onlyAndroid
env:
  AMOUNT: 0.01
  ACCOUNT: "0x435933c8064b4Ae76bE665428e0307eF2cCFBD68"
  ADDRESS: "0x8a9844e4750f5ce5f7988c4d1e04c278c718feea"
onFlowStart:
  - runFlow: ../setup_reset/setupApp.yaml
---
## User should be able to send custom tokens
- tapOn:
    id: "BalanceScreen_ManageTokensButton"
- tapOn:
    id: "ManageTokenScreen_AddCustomToken_Button"
- tapOn:
    id: "AddCustomTokenBottomSheet-TextInput-Address"
- runFlow:
      when:
          visible:
              id: "android:id/closeButton"
      commands:
          - tapOn:
                id: "android:id/closeButton"
- inputText: ${ADDRESS}
- repeat:
    while:
      visible: "Add"
    commands:
      - tapOn: "Add"
- repeat:
    while:
      visible:
         id: "BackButtonHeader-BaseIcon-backButton"
    commands:
      - tapOn:
            id: "BackButtonHeader-BaseIcon-backButton"
- tapOn:
    id: "BalanceScreen_SendButton"
- tapOn:
    id: "SelectAmountConversionToggle_Button"
- tapOn:
    id: "SelectAmountTokenSelector_Button"
- tapOn:
    id: "TokenSelectionBottomSheet_TokenCard_CARP"
- tapOn:
    id: "SEND_1_KEY"
- tapOn:
    id: "SelectAmountSendComponent_NextButton"
- tapOn:
    id: "AnimatedFilterChips-accounts"
- tapOn:
    id: "AccountCard_Item"
    index: 0
- tapOn:
    id: "ReceiverScreen_NextButton"
- runFlow:
    when:
      visible: "Fee delegation"
    commands:
      - extendedWaitUntil:
          visible:
              id: "MAX_FEE_GALACTICA"
          timeout: 10000
      - tapOn:
          id: "SummaryScreen_NextButton"
- repeat:
    times: 6
    commands:
      - tapOn:
          id: "numpad-1"
- assertVisible: "Tokens"
- evalScript: ${console.log('Send custom token Ends')}