appId: org.vechain.veworld.app
tags:
  - pull-request
onFlowStart:
  - runFlow: ../setup_reset/setupApp.yaml
---
## User should be able to send tokens delegating with account method
- tapOn:
    id: "BalanceScreen_SendButton"
- tapOn:
    id: "SelectAmountConversionToggle_Button"
- tapOn:
    id: "SEND_1_KEY"
- tapOn:
    id: "SelectAmountSendComponent_NextButton"
- tapOn:
    id: "AnimatedFilterChips-accounts"
- tapOn:
    id: "AccountCard_Item"
    index: 0
- tapOn:
    id: "ReceiverScreen_NextButton"
- runFlow:
    when:
      visible: "Fee delegation"
    commands:
      - extendedWaitUntil:
          visible:
              id: "MAX_FEE_GALACTICA"
          timeout: 10000
      - tapOn:
          id: "SummaryScreen_NextButton"
- repeat:
    times: 6
    commands:
      - tapOn:
          id: "numpad-1"
- assertVisible: "Tokens"
- tapOn:
    id: "BalanceScreen_WalletManagementButton"
    retryTapIfNoChange: false
- tapOn:
    id: "selectAccount"
    index: 1
- tapOn: 
    id: "BalanceScreen_SendButton"
- tapOn:
    id: "SelectAmountConversionToggle_Button"
- tapOn:
    id: "SEND_1_KEY"
- tapOn:
    id: "SelectAmountSendComponent_NextButton"
- tapOn:
    id: "AnimatedFilterChips-accounts"
- tapOn:
    id: "AccountCard_Item"
    index: 0
- tapOn:
    id: "ReceiverScreen_NextButton"
- runFlow:
    when:
      visible: "Fee delegation"
    commands:
      - extendedWaitUntil:
          visible:
              id: "MAX_FEE_GALACTICA"
          timeout: 10000
      - tapOn:
          id: "DELEGATE_OPEN"
      - tapOn:
          id: "button-ACCOUNT"
      - tapOn:
          id: "DELEGATE_ACCOUNT_CARD_RADIO"
          index: 0
      - tapOn:
          id: 'RENDERED_OPTION_BUTTON_BAR_APPLY'
      - extendedWaitUntil:
          visible:
              id: "SummaryScreen_NextButton"
          timeout: 10000
      - tapOn:
          id: "SummaryScreen_NextButton"
- repeat:
    times: 6
    commands:
      - tapOn:
          id: "numpad-1"
- assertVisible: "Tokens"
- evalScript: ${console.log('Send VET from Account 2 to Account 1 delegating fee to account')}
