#send_vet_vetho.yaml
appId: org.vechain.veworld.app
tags:
  - pull-request
onFlowStart:
  - runFlow: ../setup_reset/setupApp.yaml
---
## User should be able to send tokens - Send VET from Account 1 to Account 2
- tapOn:
    id: "BalanceScreen_SendButton"
- tapOn:
    id: "SelectAmountConversionToggle_Button"
- tapOn:
    id: "SEND_1_KEY"
- tapOn:
    id: "SelectAmountSendComponent_NextButton"
- tapOn:
    id: "AnimatedFilterChips-accounts"
- tapOn:
    id: "AccountCard_Item"
    index: 0
- tapOn:
    id: "ReceiverScreen_NextButton"
- runFlow:
    when:
      visible: "Fee delegation"
    commands:
      - extendedWaitUntil:
          visible:
              id: "MAX_FEE_GALACTICA"
          timeout: 10000
      - tapOn:
          id: "SummaryScreen_NextButton"
- repeat:
    times: 6
    commands:
      - tapOn:
          id: "numpad-1"
- assertVisible: "Tokens"
- evalScript: ${console.log('Send VET from Account 1 to Account 2')}

## User should be able to send tokens - Send VETHO from Account 1 to Account 2
- tapOn:
    id: "BalanceScreen_SendButton"
- tapOn:
    id: "SelectAmountConversionToggle_Button"
- tapOn:
    id: "SelectAmountTokenSelector_Button"
- tapOn:
    id: "TokenSelectionBottomSheet_TokenCard_VTHO"
- tapOn:
    id: "SEND_1_KEY"
- tapOn:
    id: "SelectAmountSendComponent_NextButton"
- tapOn:
    id: "AnimatedFilterChips-accounts"
- tapOn:
    id: "AccountCard_Item"
    index: 0
- tapOn:
    id: "ReceiverScreen_NextButton"
- runFlow:
    when:
      visible: "Fee delegation"
    commands:
      - extendedWaitUntil:
          visible:
              id: "MAX_FEE_GALACTICA"
          timeout: 10000
      - tapOn:
          id: "SummaryScreen_NextButton"
- repeat:
    times: 6
    commands:
      - tapOn:
          id: "numpad-1"
- assertVisible: "Tokens"
- evalScript: ${console.log('Send VETHO from Account 1 to Account 2')}
