# flow.yaml

appId: org.vechain.veworld.app
env:
    AMOUNT: 0.01
    ACCOUNT: "0x435933c8064b4Ae76bE665428e0307eF2cCFBD68"
---
- launchApp:
    clearState: true
## welcome screen
- assertVisible: "DEV:DEMO"
- tapOn:
    id: "dev_demo"
- tapOn:
      id: "settings-tab"
- tapOn: "Networks"
- tapOn: "Mainnet"
- tapOn: "Testnet"
- tapOn:
      id: "wallet-tab"
- tapOn: "Wallet 1"

## Homepage - Adding accounts
- assertVisible: "VeWorld"
- tapOn:
      id: "HomeScreen_WalletManagementButton-wrapper"
- tapOn: "Wallet 1"
- tapOn:
      id: "WalletDetailScreen_addAccountButton"
- tapOn:
      id: "WalletDetailScreen_addAccountButton"
- tapOn:
      id: "wallet-tab"
- tapOn:
      id: "AccountCard_changeAccountButton"
- tapOn:
      text: "Account 1"

## User should be able to send tokens - Send VET from Account 1 to Account 2
- tapOn: "Send"
- assertVisible: "Send your token"
- tapOn: "Vechain"
- inputText: ${AMOUNT}
- tapOn: "Send"
- tapOn: "NEXT"
- tapOn: "Account 2"
- tapOn:
    id: "next-button"
- runFlow:
    when:
      visible: "Select delegation"
    commands:
      - tapOn:
          id: "confirm-send-button"
- tapOn: "Insert your 6-digit PIN"
- assertVisible: "Insert your 6-digit PIN"
- repeat:
    times: 6
    commands:
      - tapOn: "1"
- assertVisible: "VeWorld"
- evalScript: ${console.log('Send VET from Account 1 to Account 2')}

## User should be able to send tokens - Send VETHO from Account 1 to Account 2
- tapOn:
    id: "wallet-tab"
- tapOn: "Send"
- tapOn: "VeThor"
- inputText: ${AMOUNT}
- tapOn: "Currency balance"
- tapOn: "NEXT"
- tapOn: "Account 2"
- tapOn:
    id: "next-button"
- runFlow:
    when:
      visible: "Select delegation"
    commands:
      - tapOn:
          id: "confirm-send-button"
- assertVisible: "Insert your 6-digit PIN"
- repeat:
    times: 6
    commands:
      - tapOn: "1"
- assertVisible: "VeWorld"
- evalScript: ${console.log('Send VETHO from Account 1 to Account 2')}

## User should be able to send tokens-Send VET from Account 2 to Account 1
- tapOn:
    id: "wallet-tab"
- tapOn:
    id: "AccountCard_changeAccountButton"
- tapOn:
    text: "Account 2"
- tapOn: "Send"
- tapOn: "Vechain"
- inputText: ${AMOUNT}
- tapOn: "Currency balance"
- tapOn: "NEXT"
- tapOn: "Account 1"
- tapOn: "NEXT"
- runFlow:
    when:
      visible: "Select delegation"
    commands:
      - tapOn:
          id: "confirm-send-button"
- repeat:
    times: 6
    commands:
      - tapOn: "1"
- assertVisible: "Your tokens"
- evalScript: ${console.log('Send VET from Account 2 to Account 1')}

## User should be able to send tokens delegating with account method
- tapOn:
    id: "AccountCard_changeAccountButton"
- tapOn: "Account 1"
- tapOn:
    id: "sendButton"
- tapOn: "Vechain"
- tapOn:
    id: "SendScreen_amountInput"
- inputText: ${AMOUNT}
- tapOn: "Currency balance"
- tapOn: "NEXT"
- tapOn: "Account 2"
- tapOn: "NEXT"
- evalScript: ${console.log('NEXT IS OK')}
- runFlow:
    when:
      visible: "Select delegation"
    commands:
      - tapOn:
          id: "button-ACCOUNT"
      - tapOn:
          text: "Account 2"
          index: 1
      - tapOn:
          id: "confirm-send-button"
- tapOn:
    id: "BackButtonHeader-BaseIcon-backButton"
- tapOn:
    id: "confirm-send-button"
- repeat:
    times: 6
    commands:
      - tapOn: "1"
- assertVisible: "Your tokens"
- runFlow:
    env:
      AMOUNT: 0.01
    commands:
      - tapOn:
          id: "sendButton"
      - tapOn: "VeThor"
      - tapOn:
          id: "SendScreen_amountInput"
      - inputText: ${AMOUNT}
      - tapOn: "Currency balance"
      - tapOn: "NEXT"
      - tapOn: "Account 2"
      - tapOn: "NEXT"
      - evalScript: ${console.log('NEXT IS OK')}
      - runFlow:
          when:
            visible: "Select delegation"
          commands:
            - tapOn:
                id: "button-ACCOUNT"
            - tapOn:
                text: "Account 2"
                index: 1
            - tapOn:
                id: "confirm-send-button"
      - tapOn:
          id: "BackButtonHeader-BaseIcon-backButton"
      - tapOn:
          id: "confirm-send-button"
      - repeat:
          times: 6
          commands:
            - tapOn: "1"
- evalScript: ${console.log('Delegation account Method complete')}

## Reset the App
- evalScript: ${console.log('Resetting The App')}
- assertVisible:
    id: "settings-tab"
- tapOn:
    id: "settings-tab"
- tapOn:
    id: "BackButtonHeader-BaseIcon-backButton"
- assertVisible:
    id: "settings-screen"
- tapOn: "General"
- tapOn:
    text: Reset App
    index: 0
- tapOn:
    id: "reset-app-checkbox"
- tapOn: RESET APP
- assertVisible: "DEV:DEMO"