# flow.yaml

appId: org.vechain.veworld.app
env:
    AMOUNT: 0.01
    ACCOUNT: "0x435933c8064b4Ae76bE665428e0307eF2cCFBD68"
---
- launchApp:
    clearState: true
## welcome screen
- assertVisible: "DEV:DEMO"
- tapOn:
    id: "dev_demo"
- tapOn:
      id: "settings-tab"
- tapOn: "Networks"
- tapOn: "Mainnet"
- tapOn: "Testnet"
- tapOn:
      id: "wallet-tab"
- tapOn: "Wallet 1"

## Homepage - Adding accounts
- assertVisible: "VeWorld"
- tapOn:
      id: "HomeScreen_WalletManagementButton-wrapper"
- tapOn: "Wallet 1"
- tapOn:
      id: "WalletDetailScreen_addAccountButton"
- tapOn:
      id: "WalletDetailScreen_addAccountButton"
- tapOn:
      id: "wallet-tab"
- tapOn:
      id: "AccountCard_changeAccountButton"
- tapOn:
      text: "Account 1"

## User should be able to send custom tokens

- evalScript: ${console.log('Send custom Token Flow starts')}

- tapOn:
    id: "EditTokensBar_BaseIcon_manageToken-wrapper"
- tapOn:
    id: "ManageTokenScreen_AddCustomToken_Button-wrapper"
- tapOn:
    id: "AddCustomTokenBottomSheet-TextInput-Address"
- inputText: "0x8a9844e4750f5ce5f7988c4d1e04c278c718feea"
- tapOn:
    text: "Add"
    index: 1
- assertVisible:
    id: "BackButtonHeader-BaseIcon-backButton"
- tapOn:
    id: "BackButtonHeader-BaseIcon-backButton"
- tapOn: "Send"
- tapOn: "CarpToken"
- tapOn:
    id: "SendScreen_amountInput"
- inputText: ${AMOUNT}
- tapOn: "Currency balance"
- tapOn: "NEXT"
- tapOn: "Account 2"
- tapOn: "NEXT"
- runFlow:
      when:
        visible: "Select delegation"
      commands:
          - tapOn:
              id: "confirm-send-button"
- repeat:
    times: 6
    commands:
      - tapOn: "1"
- assertVisible: "Your tokens"

## Reset the App
- evalScript: ${console.log('Resetting The App')}
- assertVisible:
    id: "settings-tab"
- tapOn:
    id: "settings-tab"
- tapOn:
    id: "BackButtonHeader-BaseIcon-backButton"
- extendedWaitUntil:
    visible:
        id: "settings-screen"
    timeout:  300000
- assertVisible:
    id: "settings-screen"
- tapOn: "General"
- tapOn:
    text: Reset App
    index: 0
- tapOn:
    id: "reset-app-checkbox"
- tapOn: RESET APP
- assertVisible: "DEV:DEMO"