#transactions_manage_urls.yaml
appId: org.vechain.veworld.app
tags:
    - onlyAndroid
env:
    URL_1: "https://sponsor-testnet.vechain.energy/by/282"
    URL_2: "https://sponsor-testnet.vechain.energy/by/219"
onFlowStart:
    - runFlow: ../setup_reset/setupApp.yaml
---
## User can add a delegation URL with the Manage URLs button
- tapOn:
      id: "settings-tab"
## Tap back button if visible (may be hidden by notification snackbar)
- runFlow:
      when:
          visible:
              id: "BackButtonHeader-BaseIcon-backButton"
      commands:
          - tapOn:
                id: "BackButtonHeader-BaseIcon-backButton"
- tapOn:
      id: "Transactions"
- tapOn:
      id: "Manage_Transactions_Urls"
- extendedWaitUntil:
      visible:
          id: "ManageUrls_addUrlButton-wrapper"
      timeout: 10000
- tapOn:
      id: "ManageUrls_addUrlButton-wrapper"
- tapOn:
      id: "AddUrl_input"
- inputText: "${URL_1}"
# START FLOW - hide keyboard to prevent errors
- runFlow:
      when:
          platform: Android
      commands:
          - hideKeyboard
# END FLOW
- tapOn:
      id: "Add_URL_Submit"
## User can add multiple delegation URLs with the Manage URLs button
- extendedWaitUntil:
      visible:
          id: "ManageUrls_addUrlButton-wrapper"
      timeout: 10000
- tapOn:
      id: "ManageUrls_addUrlButton-wrapper"
- tapOn:
      id: "AddUrl_input"
- inputText: "${URL_2}"
# START FLOW - hide keyboard to prevent errors
- runFlow:
      when:
          platform: Android
      commands:
          - hideKeyboard
# END FLOW
- tapOn:
      id: "Add_URL_Submit"
- assertVisible: "${URL_1}"
- assertVisible: "${URL_2}"
## User can delete delegation URLs
- swipe:
      from:
          id: "Delegation_Url_0"
          index: 0
      direction: "LEFT"
- tapOn:
      id: "DeleteUnderlay_DeleteIcon-wrapper"
- assertNotVisible: "${URL_1}"
- assertVisible: "${URL_2}"
