# setupflow.yaml

appId: org.vechain.veworld.app
env:
    AMOUNT: 0.01
    ACCOUNT: "0x435933c8064b4Ae76bE665428e0307eF2cCFBD68"

---
- launchApp:
      clearState: true

## welcome screen
- extendedWaitUntil:
      visible:
          id: "dev_demo"
      timeout: 30000
- tapOn:
      id: "dev_demo"
- runFlow:
      when:
          visible:
              id: "button_notifications_enable"
      commands:
          - tapOn:
                id: "button_notifications_skip"
